crates/djls-semantic/tests/snapshots/corpus__repos__babybuddy__core__templatetags__misc.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities:
  "core.templatetags.misc::filter::next":
    expects_arg: true
    arg_optional: false
  "core.templatetags.misc::filter::prev":
    expects_arg: true
    arg_optional: false
block_specs: {}
