crates/djls-semantic/tests/snapshots/corpus__repos__babybuddy__core__templatetags__timers.py.snap
---
source: crates/djls-semantic/tests/corpus.rs
expression: snapshot(result)
---
tag_rules:
  "core.templatetags.timers::tag::instance_add_url":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: url_name
        required: true
        kind: Variable
        position: 0
    as_var: strip
  "core.templatetags.timers::tag::quick_timer_nav":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
  "core.templatetags.timers::tag::timer_nav":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
filter_arities: {}
block_specs: {}
